# protobench

./: .gitignore  Cargo.toml  FINDINGS.md  README.md  learnings.md
benchmarks/: Cargo.toml  build.rs
benchmarks/benches/: protocol_bench.rs
benchmarks/examples/: comprehensive_metrics_demo.rs
benchmarks/src/: capnp_client.rs  grpc_client.rs  lib.rs  main.rs  rest_client.rs
capnp-service/: Cargo.toml  build.rs
capnp-service/src/: main.rs
grpc-service/: Cargo.toml  build.rs
grpc-service/src/: main.rs
rest-service/: Cargo.toml
rest-service/src/: main.rs
schemas/: metrics.capnp  metrics.proto  openapi.yaml
shared/: Cargo.toml
shared/src/: lib.rs
