[package]
name = "grpc-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Additional dependencies for gRPC
tokio-stream = "0.1"

# Local dependencies
shared = { path = "../shared" }

[build-dependencies]
tonic-build = { workspace = true }