[package]
name = "rest-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }

# Local dependencies
shared = { path = "../shared" }